# Eddy2.0

./: README.md
ros2_ws/src/eddy_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_description/meshes/: eddy_collision.dae
ros2_ws/src/eddy_description/urdf/: eddy.urdf.xacro
ros2_ws/src/eddy_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_gazebo/launch/: gazebo.launch.py  stong-pond.launch.py
ros2_ws/src/eddy_gazebo/urdf/: eddy.gazebo.xacro
ros2_ws/src/eddy_gazebo/worlds/: 4mtallplant.stl  README.md  bellairs.dae  bellairs.world  bermuda_triangle.world  box.dae  empty_lake.world  farlain.dae  farlain_lake.world  farlain_lake_bottom.world  stong.dae  stong_pond.world
ros2_ws/src/eddy_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/eddy_interfaces/msg/: ThrusterStatus.msg
ros2_ws/src/eddy_localization/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_localization/launch/: localization.launch.py
ros2_ws/src/eddy_lowlevel/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_lowlevel/eddy_lowlevel/: thruster_node.py
ros2_ws/src/eddy_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_webui/: package.xml  setup.cfg  setup.py
ros2_ws/src/eddy_webui/eddy_webui/: web_ui_node.py
ros2_ws/src/eddy_webui/launch/: webui.launch.py
ros2_ws/src/eddy_webui/www/: battery.html  camera.html  diagnostics.html  gps.html  imu.html  index.html  light.html  mission_planner.html  operational_mode.html  sonar.html  telemetry.html  thrusters.html  training.html  vegetation.html
ros2_ws/src/eddy_webui/www/css/: dashboard.css
(+5 files in other folders)
